--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <body>
     <div>
         <h1 style = "margin-block-end:0em" class = "header text">Suggested Meal Points</h1>
-        <h3 style = "margin-block-start:0em" class="text"> (Fall Semester)</h3>
+        <h3 style = "margin-block-start:0em" class="text"> (Spring Semester 2024)</h3>
         <div class = "exp">
             <h1 style ="margin-block-end:0em" class = "points text" id="points"> Points: 
                 <span class = "tooltiptext"> Help! </span>
             </h1>
             
             <h2 style ="margin-block-end:0em" class = "text tooltip" id = "daily"> Meal Points Per Day: </h2>
+            <h2 style ="margin-block-end:0em" class = "text tooltip" id = "cDaily"> Custom Points Per Day: </h2>
         </div>
         <div>
             <form action="/action_page.php">
@@ -35,12 +36,14 @@
                     <option value="Apartment">Apartment</option>
                     <option value="Off-Campus">Off-Campus</option>
                 </select><br><br>
+                <label for="cur">What is your current meal points?</label>
+                <input type="number" id="cur" name="cur" min="0" value="2000"></label><br><br><br>
                 <label for="wknd">Exclude Weekends?</label>
                 <input type="checkbox" id="wknd" name="wknd"><br><br>
-                <label for="break">Leaving for Fall Break?</label>
+                <label for="break">Leaving for Spring Break?</label>
                 <input type="checkbox" id="break" name="break"><br><br>
-                <label for="thanks">Leaving for Thanksgiving Break?</label>
-                <input type="checkbox" id="thanks" name="thanks"><br><br>
+                <!-- <label for="thanks">Leaving for Thanksgiving Break?</label>
+                <input type="checkbox" id="thanks" name="thanks"><br><br> -->
                 <label for="first"> When was your first day?</label>
                 <input style = "margin-bottom:1rem" type="date" id = "first" name = "first"><br><br>
                 <label for="last"> When was your last day?</label>
