--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
                 <span class="tooltiptext"> Help! </span>
             </h1>
             <h2 class="text tooltip" id="daily"> Meal Points Per Day: </h2>
-            <h2 style ="margin-block-end:0em" class="text tooltip" id="cDaily"> Custom Points Per Day: </h2>
+            <h2 class="text tooltip" id="cDaily"> Custom Points Per Day: </h2>
         </div>
         <div>
             <form action="/action_page.php">
                 <label for="plan">What meal plan do you have?</label>
                 <select id="plan" name="plan">
-                    <option value="Plat">Platinum</option>
-                    <option value="Gold">Gold</option>
-                    <option value="Silver">Silver</option>
-                    <option value="Bronze">Bronze</option>
-                    <option value="Apartment">Apartment</option>
-                    <option value="Off-Campus">Off-Campus</option>
+                    <option value="Plat">Platinum (3138)</option>
+                    <option value="Gold">Gold (2809)</option>
+                    <option value="Silver">Silver (2297)</option>
+                    <option value="Bronze">Bronze (1775)</option>
+                    <option value="Apartment">Apartment (813)</option>
+                    <option value="Off-Campus">Off-Campus (480)</option>
                 </select><br><br>
                 <label for="cur">What is your current meal points?</label>
-                <input type="number" id="cur" name="cur" min="0" value="2000"></label><br><br><br>
+                <input type="number" id="cur" name="cur" min="0" value="2000"><br><br><br>
                 <label for="wknd">Exclude Weekends?</label>
                 <input type="checkbox" id="wknd" name="wknd"><br><br>
-                <label for="break">Leaving for Spring Break?</label>
+                <label for="break">Leaving for Fall Break?</label>
                 <input type="checkbox" id="break" name="break"><br><br>
-                <!-- <label for="thanks">Leaving for Thanksgiving Break?</label>
-                <input type="checkbox" id="thanks" name="thanks"><br><br> -->
+                <label for="thanks">Leaving for Thanksgiving Break?</label>
+                <input type="checkbox" id="thanks" name="thanks"><br><br>
                 <label for="first"> When was your first day?</label>
                 <input type="date" id="first" name="first"><br><br>
                 <label for="last"> When was your last day?</label>
@@ -50,6 +50,10 @@
             </form>
         </div>
         <button id="btn" type="button"> Calculate! </button>
+        <div class="contact">
+            <h1 class="text"> Suggestions are welcome! </h1>
+            <h2 class="text"> Email: c.william1@wustl.edu </h2>
+        </div>
     </div>
     <script src="calculate.js"></script>
 </body>
